attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743582661533.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/InterpreterFa
/home/runner/workspace/ai_language/src/interpreters/InterpreterFactory.cpp: In static member function ‘static std::unique_ptr<ai_language::BaseInterpreter> ai_language::InterpreterFactory::createInterpreter(const std::string&)’:
/home/runner/workspace/ai_language/src/interpreters/InterpreterFactory.cpp:13:33: error: ‘MLInterpreter’ was not declared in this scope; did you mean ‘RLInterpreter’?
   13 |         return std::make_unique<MLInterpreter>();
      |                                 ^~~~~~~~~~~~~
      |                                 RLInterpreter
/home/runner/workspace/ai_language/src/interpreters/InterpreterFactory.cpp:13:47: error: no matching function for call to ‘make_unique<<expression error> >()’
   13 |         return std::make_unique<MLInterpreter>();
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/std_thread.h:43,
                 from /nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/thread:45,
                 from /home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/BaseInterpreter.h:12,
                 from /home/runner/workspace/ai_language/src/interpreters/../../include/interpreters/InterpreterFactory.h:5,
                 from /home/runner/workspace/ai_language/src/interpreters/InterpreterFactory.cpp:2:
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1069:5: note: candidate: ‘template<class _Tp, class ... _Args> std::__detail::__unique_ptr_t<_Tp> std::make_unique(_Args&& ...)’
 1069 |     make_unique(_Args&&... __args)
      |     ^~~~~~~~~~~
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1069:5: note:   template argument deduction/substitution failed:
/home/runner/workspace/ai_language/src/interpreters/InterpreterFactory.cpp:13:47: error: template argument 1 is invalid
   13 |         return std::make_unique<MLInterpreter>();
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1084:5: note: candidate: ‘template<class _Tp> std::__detail::__unique_ptr_array_t<_Tp> std::make_unique(size_t)’
 1084 |     make_unique(size_t __num)
      |     ^~~~~~~~~~~
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1084:5: note:   candidate expects 1 argument, 0 provided
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1094:5: note: candidate: ‘template<class _Tp, class ... _Args> std::__detail::__invalid_make_unique_t<_Tp> std::make_unique(_Args&& ...)’ (deleted)
 1094 |     make_unique(_Args&&...) = delete;
      |     ^~~~~~~~~~~
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1094:5: note:   template argument deduction/substitution failed:
/home/runner/workspace/ai_language/src/interpreters/InterpreterFactory.cpp:13:47: error: template argument 1 is invalid
   13 |         return std::make_unique<MLInterpreter>();
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/home/runner/workspace/ai_language/src/interpreters/InterpreterFactory.cpp:20:33: error: ‘MLInterpreter’ was not declared in this scope; did you mean ‘RLInterpreter’?
   20 |         return std::make_unique<MLInterpreter>();
      |                                 ^~~~~~~~~~~~~
      |                                 RLInterpreter
/home/runner/workspace/ai_language/src/interpreters/InterpreterFactory.cpp:20:47: error: no matching function for call to ‘make_unique<<expression error> >()’
   20 |         return std::make_unique<MLInterpreter>();
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1069:5: note: candidate: ‘template<class _Tp, class ... _Args> std::__detail::__unique_ptr_t<_Tp> std::make_unique(_Args&& ...)’
 1069 |     make_unique(_Args&&... __args)
      |     ^~~~~~~~~~~
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1069:5: note:   template argument deduction/substitution failed:
/home/runner/workspace/ai_language/src/interpreters/InterpreterFactory.cpp:20:47: error: template argument 1 is invalid
   20 |         return std::make_unique<MLInterpreter>();
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1084:5: note: candidate: ‘template<class _Tp> std::__detail::__unique_ptr_array_t<_Tp> std::make_unique(size_t)’
 1084 |     make_unique(size_t __num)
      |     ^~~~~~~~~~~
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1084:5: note:   candidate expects 1 argument, 0 provided
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1094:5: note: candidate: ‘template<class _Tp, class ... _Args> std::__detail::__invalid_make_unique_t<_Tp> std::make_unique(_Args&& ...)’ (deleted)
 1094 |     make_unique(_Args&&...) = delete;
      |     ^~~~~~~~~~~
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1094:5: note:   template argument deduction/substitution failed:
/home/runner/workspace/ai_language/src/interpreters/InterpreterFactory.cpp:20:47: error: template argument 1 is invalid
   20 |         return std::make_unique<MLInterpreter>();
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:132: CMakeFiles/ai_language_lib.dir/src/interpreters/InterpreterFactory.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2